--- a/buy.html
+++ b/buy.html
@@ -35,7 +35,7 @@
             <p>Copyright 2024 © All rights Reserved. Design by Azur</p>
             <div class="social-wrapper">
                 <div>
-                    <a href="https://discord.gg/4ss8cVJrVQ" data-tooltip-content="discord">
+                    <a href="https://discord.gg/4ss8cVJrVQ" data-tooltip-content="discord" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                             class="bi bi-github" viewBox="0 0 16 16">
                             <path
