--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <hr class="line">
         <div class="header1">
-            <img src="photos/pcb.png" alt="foto" id="foto" width="640" height="400">
+            <img src="photos/pcb.png" alt="photo" id="photo" width="640" height="400">
             <p class="description1">I am a high-tech board designed specifically for offensive and penetration
                 applications, thus enhancing the characteristics of the M5Stick device. Made from high-quality
                 materials, the board
@@ -33,7 +33,7 @@
             </p>
         </div>
         <div class="header2">
-            <img src="photos/front pcb.jpg" alt="foto" id="foto" width="640" height="400">
+            <img src="photos/front pcb.jpg" alt="photo" id="photo" width="640" height="400">
             <p class="description2">
                 Azur Board is a powerful board that allows you to take your firmware to the next level. With its
                 powerful features and advanced capabilities, it has things that will amaze you. Whether you are a
@@ -45,7 +45,7 @@
                 <p>Copyright 2024 © All rights Reserved. Design by Azur</p>
                 <div class="social-wrapper">
                     <div>
-                        <a href="https://discord.gg/4ss8cVJrVQ" data-tooltip-content="discord">
+                        <a href="https://discord.gg/4ss8cVJrVQ" data-tooltip-content="discord" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                                 class="bi bi-github" viewBox="0 0 16 16">
                                 <path
