--- a/features.html
+++ b/features.html
@@ -49,7 +49,7 @@
                 <img src="photos/rfid.png">
                 <div class="card__content">
                     <p class="card__title">PN532</p>
-                    <p class="card__description">The PN532 is a high-performance NFC module designed for contactless
+                    <p class="card__description">The PN532 is a peak operating NFC module designed for contactless
                         communication. It supports
                         various protocols including ISO/IEC 14443 and FeliCa, and offers excellent sensitivity and low
                         power consumption.</p>
@@ -59,7 +59,7 @@
                 <img src="photos/sd.png">
                 <div class="card__content">
                     <p class="card__title">SD Card</p>
-                    <p class="card__description">The SD Card module is a high-performance storage solution designed for
+                    <p class="card__description">The SD Card module is an efficient storage solution designed for
                         a wide range of applications.
                         It supports various file systems and offers excellent read/write speeds and low power
                         consumption.</p>
