--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div class="header2">
             <img src="photos/front pcb.jpg" alt="photo" id="photo" width="640" height="400">
             <p class="description2">
-                Azur Board is a powerful board that allows you to take your firmware to the next level. With its
-                powerful features and advanced capabilities, it has things that will amaze you. Whether you are a
+                Azur Board is a powerful and versatile board that allows you to take your firmware to the next level. With its
+                advanced features and exceptional capabilities, it has things that will amaze you. Whether you are a
                 hobbyist, a student or a professional, Azur Board is the perfect companion for your projects.
             </p>
         </div>
