--- a/features.html
+++ b/features.html
@@ -39,7 +39,7 @@
                 <img src="photos/ir.png">
                 <div class="card__content">
                     <p class="card__title">IR LED Transmitter and Receiver</p>
-                    <p class="card__description">The IR LED transmitter and receiver are designed for efficient infrared
+                    <p class="card__description">The IR LED transmitter and receiver are designed for effective infrared
                         communication. They offer
                         high sensitivity and low power consumption, making them ideal for remote control applications.
                     </p>
@@ -51,7 +51,7 @@
                     <p class="card__title">PN532</p>
                     <p class="card__description">The PN532 is a peak operating NFC module designed for contactless
                         communication. It supports
-                        various protocols including ISO/IEC 14443 and FeliCa, and offers excellent sensitivity and low
+                        various protocols including ISO/IEC 14443 and FeliCa, and offers optimal sensitivity and low
                         power consumption.</p>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                     <p class="card__title">SD Card</p>
                     <p class="card__description">The SD Card module is an efficient storage solution designed for
                         a wide range of applications.
-                        It supports various file systems and offers excellent read/write speeds and low power
+                        It supports various file systems and provides superb read/write speeds and low power
                         consumption.</p>
                 </div>
             </div>
